tests/fixtures/onprem-core-firewall-valid.v4
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.0.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -j DROP
-A DOCKER-USER -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A DOCKER-USER -s 172.30.0.0/24 -d 172.30.0.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.0.0/24 -d 172.30.10.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.0.0/24 -d 172.30.20.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.0.0/24 -d 172.30.30.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.0.0/24 -m conntrack --ctstate NEW -j REJECT
-A DOCKER-USER -s 172.30.10.0/24 -d 172.30.0.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.10.0/24 -d 172.30.10.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.10.0/24 -d 172.30.20.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.10.0/24 -d 172.30.30.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.10.0/24 -m conntrack --ctstate NEW -j REJECT
-A DOCKER-USER -s 172.30.20.0/24 -d 172.30.0.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.20.0/24 -d 172.30.10.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.20.0/24 -d 172.30.20.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.20.0/24 -d 172.30.30.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.20.0/24 -m conntrack --ctstate NEW -j REJECT
-A DOCKER-USER -s 172.30.30.0/24 -d 172.30.0.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.30.0/24 -d 172.30.10.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.30.0/24 -d 172.30.20.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.30.0/24 -d 172.30.30.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A DOCKER-USER -s 172.30.30.0/24 -m conntrack --ctstate NEW -j REJECT
-A DOCKER-USER -j RETURN
-A OUTPUT -d 172.30.0.0/24 -j REJECT
-A OUTPUT -d 172.30.10.0/24 -j REJECT
-A OUTPUT -d 172.30.20.0/24 -j REJECT
-A OUTPUT -d 172.30.30.0/24 -j REJECT
COMMIT
